Revert (most of) last 2 commits as Grep's --exclude-dir=.?* doesn't seem to be working as expected.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5092 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,7 @@
 2010-07-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
- * doc/geany.txt, doc/geany.html:
-   Fix Grep --exclude-dir example to not filter out the current
-   directory (oops).
- * src/search.c:
-   Make Find in Files extra options default to --exclude-dir=.?* to
-   filter out hidden directories. (Still disabled by default so
-   non-GNU/older Grep works).
+ * src/search.c, doc/geany.txt, doc/geany.html:
+   Fix Grep --exclude-dir example.
 
 
 2010-07-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
