Show the Project Properties build tab when choosing 'Set Build Commands' for now to prevent confusion with non-project commands.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5094 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-07-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/build.c, src/project.c, src/project.h:
+   Show the Project Properties build tab when choosing 'Set Build
+   Commands' for now to prevent confusion with non-project commands.
+
+
 2010-07-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/search.c, doc/geany.txt, doc/geany.html:
