Minor update of German translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5095 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-07-07  Frank Lanitz  <frank@frank.uvena.de>
+
+ * de.po: Minor update of German translation.
+
+
 2010-06-02  Peter Scholtens  <peter(dot)scholtens(at)xs4all(dot)nl>
 
  * nl.po: Update of Dutch translation, thanks to Ayke van Laëthem.
