Add note to restart Geany after installing/updating before editing hidden prefs.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5100 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
    Fix scrolling the editor line in view after loading a session and
    switching document tabs. Note this causes repainting so needs
    improvement.
+ * doc/geany.txt, doc/geany.html:
+   Add note to restart Geany after installing/updating before editing
+   hidden prefs.
 
 
 2010-07-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
