--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-07-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * wscript:
+   Fix './waf install'.
+
+
 2010-07-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/editor.c:
