Fix build menu translation problems.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5103 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-07-11  Lex Trotman  <elextr(at)gmail(dot)com>
+
+ * src/build.c:
+   Fix build menu translation problems.
+
+
 2010-07-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * wscript:
