Focus toolbar item when pressing Go to Line keybinding only when it's not in the toolbar's drop down overflow menu (fixes #3027454).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5104 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-07-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/keybindings.c:
+   Focus toolbar item when pressing Go to Line keybinding only when
+   it's not in the toolbar's drop down overflow menu (fixes #3027454).
+
+
 2010-07-11  Lex Trotman  <elextr(at)gmail(dot)com>
 
  * src/build.c:
