Update list of Python builtins, based on Python 2.6.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5106 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-07-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * data/filetypes.python:
+   Update list of Python builtins, based on Python 2.6.
+
+
 2010-07-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/filetypes.c:
