Fix missing template files in the Windows installer.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5107 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * geany.nsi:
+   Fix missing template files in the Windows installer.
+
+
 2010-07-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * data/filetypes.python:
