Implement 'Select All' for the VTE widget.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5108 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-07-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/keybindings.cm src/vte.cm src/vte.h:
+   Implement 'Select All' for the VTE widget.
+
+
 2010-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * geany.nsi:
