Update AUTHORS file
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5110 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,12 @@
-Enrico Troeger <enrico(dot)troeger(at)uvena(dot)de>
+Developers:
+-----------
+
 Nick Treleaven <nick(dot)treleaven(at)btinternet(dot)com>
+Enrico Troeger <enrico(dot)troeger(at)uvena(dot)de>
 Frank Lanitz <frank(at)frank(dot)uvena(dot)de>
+
+Regular Contributors:
+---------------------
+
+Lex Trotman <elextr<at>gmail<dot>com>
+Eugene Arshinov <earshinov(at)gmail(dot)com>
