Make make_comment_block() work with a GString. This is not yet perfect but a bit better than before.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5112 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * src/vte.c:
    Fix build with GTK 2.8, use the stock icon name directly instead
    of the macro. Though, the icon is still missing for GTK 2.8.
+ * src/templates.c:
+   Make make_comment_block() work with a GString. This is not yet
+   perfect but a bit better than before.
 
 
 2010-07-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
