--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2010-08-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * ru.po: Update of Russian translation. Thanks to Denis Koryavov for
+          for providing.
+
+
 2010-07-07  Frank Lanitz  <frank@frank.uvena.de>
 
  * de.po: Minor update of German translation.
@@ -50,7 +56,7 @@
  * fr.po: Update of French translation. Thanks Jean-Philippe Moal.
  * ja.po: Update of Japanese translation. Thanks to Chikahiro Masami.
  * pt.po: Update of Portugese translation. Thanks to André Glória for
-          providing 
+          providing
 
 
 2010-05-31  Frank Lanitz  <frank@frank.uvena.de>
