Make ui_label_new_bold() a function. Escape the name of the current document for markup when using document name for menu items (closes #3038844).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5116 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-08-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/ui_utils.c, src/ui_utils.h:
+   Make ui_label_new_bold() a function.
+   Escape the name of the current document for markup when using
+   document name for menu items (closes #3038844).
+
+
 2010-08-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/utils.c, src/utils.h:
