--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
    Make ui_label_new_bold() a function.
    Escape the name of the current document for markup when using
    document name for menu items (closes #3038844).
+ * src/vte.c:
+   Inherit 'beep on errors' preference for the audible bell preference
+   for the VTE (closes #3038215).
 
 
 2010-08-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
