Reorder Focus keybindings.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5125 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@
    autocompletion.
  * src/keybindings.h, src/plugindata.h:
    Randomly sort keybinding IDs to show there should be no order.
+ * src/keybindings.c:
+   Reorder Focus keybindings.
 
 
 2010-08-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
