Applying a patch by Erik de Castro Lopo for checking against pkg-config when running autogen.sh.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5128 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-08-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * autogen.sh:
+   Applying a patch by Erik de Castro Lopo for checking against 
+   pkg-config when running autogen.sh. Thanks for the patch. 
+
+
 2010-08-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/keybindings.c, src/keybindings.h, src/prefs.c, src/plugindata.h:
