Applying a patch by Colomban Wendling to print out log domains. Thanks.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5129 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,10 @@
 
  * autogen.sh:
    Applying a patch by Erik de Castro Lopo for checking against 
-   pkg-config when running autogen.sh. Thanks for the patch. 
+   pkg-config when running autogen.sh. Thanks for the patch.
+ * src/log.c:
+   Applying a patch by Colomban Wendling to print out log domains. 
+   Thanks.
 
 
 2010-08-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
