Reorder Focus keybindings.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5130 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,16 @@
+2010-08-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * doc/geany.txt, doc/geany.html:
+   Reorder Focus keybindings.
+
+
 2010-08-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * autogen.sh:
-   Applying a patch by Erik de Castro Lopo for checking against 
+   Applying a patch by Erik de Castro Lopo for checking against
    pkg-config when running autogen.sh. Thanks for the patch.
  * src/log.c:
-   Applying a patch by Colomban Wendling to print out log domains. 
+   Applying a patch by Colomban Wendling to print out log domains.
    Thanks.
 
 
