Update of simplified Chinese translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5144 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2010-08-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * zh_CN.po: Update of simplified Chinese translation. Thanks to
+             Xhacker Liu.
+
+
 2010-08-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * ru.po: Update of Russian translation. Thanks to Denis Koryavov for
