--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-08-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * src/search.c:
+   Fix a memory leak based on input by Daniel Marjamäki. Thanks. 
+
+
 2010-08-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * doc/geany.txt, doc/geany.html:
