Fix segfault on Tools->Reload Configuration when no documents are open (#3037079).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/Geany-0_19_1@5161 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * win32-config.h, geany.nsi, configure.ac, doc/geany.txt,
    doc/geany.html, wscript, geany_private.rc:
    Version bump.
+ * src/filetypes.c, NEWS:
+   Fix segfault on Tools->Reload Configuration when no documents are
+   open (#3037079).
 
 
 2010-08-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
