Add editor_goto_pos() to the plugin API.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5164 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
    Rewrite the logic to auto detect encodings a bit to make it more
    readable and fix a slightly wrong detection on Windows
    (closes #3019573).
+ * plugins/geanyfunctions.h, src/editor.c, src/plugindata.h,
+   src/plugins.c:
+   Add editor_goto_pos() to the plugin API.
 
 
 2010-08-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
