Fix infinite loop in Markdown lexer (patch by Colomban Wendling, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5168 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * src/filetypes.c:
    Fix segfault on Tools->Reload Configuration when no documents are
    open (#3037079).
+ * scintilla/LexMarkdown.cxx:
+   Fix infinite loop in Markdown lexer (patch by Colomban Wendling,
+   thanks).
 
 
 2010-08-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
