--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@ Note: features included in brackets have lower priority.
 	o common default highlighting styles configurable for all
 	  programming languages (done for C-like filetypes using
 	  filetypes.common named styles)
+	o update included regex library (and other CTags improvements)
 	o (better custom filetype support)
 	o (custom template insertion - so user can add licenses, etc)
 	o (selectable menu of arguments to use for Make, from Make Custom)
