Fix saving non-project filetype error regex.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5170 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
  * scintilla/LexMarkdown.cxx:
    Fix infinite loop in Markdown lexer (patch by Colomban Wendling,
    thanks).
+ * src/build.c:
+   Fix saving non-project filetype error regex.
 
 
 2010-08-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
