Fix memory leak in read_regex().
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5171 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
    thanks).
  * src/build.c:
    Fix saving non-project filetype error regex.
+ * src/build.c:
+   Fix memory leak in read_regex().
 
 
 2010-08-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
