Apply a patch by Jiří Techet which is preventing warnings when using  -Wmissing-prototypes on compiling. Thanks.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5187 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-08-21  Frank Lanitz  <frank@frank.uvena.de>
+
+ * src/plugindata.h:
+   Apply a patch by Jiří Techet which is preventing warnings when using
+   -Wmissing-prototypes on compiling. Thanks. 
+
+
 2010-08-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * scintilla/KeyWords.cxx:
