--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,17 @@
+2010-08-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * scintilla/LexTxt2tags.cxx, scintilla/makefile.win32,
+   scintilla/include/SciLexer.h, scintilla/include/Scintilla.iface,
+   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
+   data/filetypes.txt2tags, wscript:
+   Add lexer for Txt2Tags (patch by Forgeot Eric, #3020632).
+
+
 2010-08-21  Frank Lanitz  <frank@frank.uvena.de>
 
  * src/plugindata.h:
    Apply a patch by Jiří Techet which is preventing warnings when using
-   -Wmissing-prototypes on compiling. Thanks. 
+   -Wmissing-prototypes on compiling. Thanks.
 
 
 2010-08-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
