Make the Properties dialog filename a label and put it first (patch by Jiří Techet, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5193 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-08-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/project.c:
+   Make the Properties dialog filename a label and put it first (patch
+   by Jiří Techet, thanks).
+
+
 2010-08-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * scintilla/LexTxt2tags.cxx, scintilla/makefile.win32,
