Remove the "Set build working directories" button from the project properties dialog (patch by Jiří Techet, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5194 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
  * src/project.c:
    Make the Properties dialog filename a label and put it first (patch
    by Jiří Techet, thanks).
+ * src/build.c, src/build.h, src/project.c, doc/geany.txt,
+   doc/geany.html:
+   Remove the "Set build working directories" button from the project
+   properties dialog (patch by Jiří Techet, thanks).
 
 
 2010-08-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
