Include all files if the Find in Files pattern field is enabled and empty.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5195 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@
    doc/geany.html:
    Remove the "Set build working directories" button from the project
    properties dialog (patch by Jiří Techet, thanks).
+ * src/search.c:
+   Include all files if the Find in Files pattern field is enabled and
+   empty.
 
 
 2010-08-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
