Rename Matlab -> Matlab/Octave. Datafile name remains the same.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5196 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
  * src/search.c:
    Include all files if the Find in Files pattern field is enabled and
    empty.
+ * src/filetypes.c:
+   Rename Matlab -> Matlab/Octave. Datafile name remains the same.
 
 
 2010-08-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
