Update of Finnish translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5197 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-08-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * fi.po: Update of Finnish translation. Thanks to Harri Koskinen.
+
+
 2010-08-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * zh_CN.po: Update of simplified Chinese translation. Thanks to
