Fix broken editing of build menu labels.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5198 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-08-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/build.c:
+   Fix broken editing of build menu labels.
+
+
 2010-08-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/project.c:
