Auto-enable building with included regex if no regcomp function is found. Remove checks for HAVE_REGCOMP in Geany source (not TagManager) - regex support is required.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5199 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 
  * src/build.c:
    Fix broken editing of build menu labels.
+ * src/encodings.c, src/filetypes.c, configure.ac:
+   Auto-enable building with included regex if no regcomp function is
+   found.
+   Remove checks for HAVE_REGCOMP in Geany source (not TagManager) -
+   regex support is required.
 
 
 2010-08-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
