--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
    regex support is required.
  * tagmanager/make.c:
    Backport fix for possible infinite loop from CTags.
+ * scintilla/PlatGTK.cxx:
+   Backport list box memory leak fixes from Scintilla 2.20.
 
 
 2010-08-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
