Add dummy entry for "do" snippet for Haskell to explicitly avoid the default completion.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5203 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-08-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * data/snippets.conf:
+   Add dummy entry for "do" snippet for Haskell to explicitly avoid the
+   default completion.
+
+
 2010-08-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/build.c:
