Add separator between Find Previous and Find in Files. Add up/down icons for Previous/Next Message.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5207 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
    a new notebook page (#3061342).
  * src/document.c:
    Add Close button to the detected file changed dialog.
+ * src/interface.c, geany.glade:
+   Add separator between Find Previous and Find in Files.
+   Add up/down icons for Previous/Next Message.
 
 
 2010-08-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
