Use up/down icons for Previous/Next Error.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5210 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
+2010-09-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/build.c:
+   Use up/down icons for Previous/Next Error.
+
+
 2010-09-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
- * src/build.c: 
+ * src/build.c:
    Fix a memory leak. Based on input by Daniel Marjamäki. Thanks for the
    catch.
 
