Add Find Usage and Go to Tag items to Search menu for easier discovery.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5211 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 
  * src/build.c:
    Use up/down icons for Previous/Next Error.
+ * src/interface.c, src/keybindings.c, src/callbacks.c,
+   src/callbacks.h, src/ui_utils.c, doc/geany.txt, doc/geany.html,
+   geany.glade:
+   Add Find Usage and Go to Tag items to Search menu for easier
+   discovery.
 
 
 2010-09-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
