Fix possible NULL dereference.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5212 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
    geany.glade:
    Add Find Usage and Go to Tag items to Search menu for easier
    discovery.
+ * tagmanager/tm_symbol.c:
+   Fix possible NULL dereference.
 
 
 2010-09-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
