Add link to glade-2.12.2.tar.gz on geany.org.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5215 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
    discovery.
  * tagmanager/tm_symbol.c:
    Fix possible NULL dereference.
+ * HACKING:
+   Add link to glade-2.12.2.tar.gz on geany.org.
 
 
 2010-09-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
