Remove NULL checks when calling g_free() (patch Erik de Castro Lopo, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5221 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,9 @@
  * doc/geany.txt, doc/geany.html:
    Mention the filetype wordchars setting can be overridden by the
    whitespace_chars filetypes.common setting.
+ * src/highlighting.c, src/encodings.c, tagmanager/tm_file_entry.c:
+   Remove NULL checks when calling g_free() (patch Erik de Castro
+   Lopo, thanks).
 
 
 2010-09-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
