Show Save As when saving if the document filename doesn't have an absolute path, so command-line new files can be saved without a prompt, but file templates still prompt the user.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5222 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,10 @@
  * src/highlighting.c, src/encodings.c, tagmanager/tm_file_entry.c:
    Remove NULL checks when calling g_free() (patch Erik de Castro
    Lopo, thanks).
+ * src/document.c:
+   Show Save As when saving if the document filename doesn't have an
+   absolute path, so command-line new files can be saved without a
+   prompt, but file templates still prompt the user.
 
 
 2010-09-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
