Simplify keybindings_check_event().
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5225 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
  * src/tools.c, src/search.c, tagmanager/python.c:
    Fix some 'possible' NULL pointer dereferences (based on patch by
    Erik de Castro Lopo).
+ * src/keybindings.c, src/keybindings.h, src/prefs.c:
+   Simplify keybindings_check_event().
 
 
 2010-09-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
