Ignore directories passed on the command-line (based on patch by Erik de Castro Lopo, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5226 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-09-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/main.c:
+   Ignore directories passed on the command-line (based on patch by
+   Erik de Castro Lopo, thanks).
+
+
 2010-09-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/interface.c, src/keybindings.c, src/ui_utils.c, geany.glade:
