Combine indent width menu item callbacks.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5229 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
    geany.glade:
    Allow per-document indent width setting (patch by Jiří Techet,
    updated by Erik de Castro Lopo - thanks).
+ * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
+   Combine indent width menu item callbacks.
 
 
 2010-09-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
