Add plugin signals project-dialog-create and project-dialog-confirmed so plugins can append a Project Properties notebook tab (patch by Jiří Techet, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5235 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,11 @@
    Prompt for reloading if the document has an undo stack to avoid
    losing undo ability on accidental reloading (patch by Colomban
    Wendling, thanks).
+ * src/project.c, src/geanyobject.c, src/geanyobject.h,
+   doc/pluginsignals.c:
+   Add plugin signals project-dialog-create and
+   project-dialog-confirmed so plugins can append a Project Properties
+   notebook tab (patch by Jiří Techet, thanks).
 
 
 2010-09-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
