--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-09-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * de.po: Minor update of German translation.
+
+
 2010-08-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * fi.po: Update of Finnish translation. Thanks to Harri Koskinen.
