Remove geany.pot from VCS as its an generated file
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5239 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,8 @@
 2010-09-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * de.po: Minor update of German translation.
-
+ * geany.pot: Remove file from version control as its an generated file. 
+ 
 
 2010-08-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
