Refactor shared submenu code with GeanySharedMenu array.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5241 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/ui_utils.c:
+   Refactor shared submenu code with GeanySharedMenu array.
+
+
 2010-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/callbacks.c:
