Add Search submenu for Find Selected, Find Usage, Go to Tag items, shared with the editor popup menu.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5243 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * src/ui_utils.c:
    Refactor shared submenu code with GeanySharedMenu array.
+ * src/interface.c, src/ui_utils.c, geany.glade:
+   Add Search submenu for Find Selected, Find Usage, Go to Tag items,
+   shared with the editor popup menu.
 
 
 2010-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
