--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
  * src/interface.c, src/ui_utils.c, geany.glade:
    Add Search submenu for Find Selected, Find Usage, Go to Tag items,
    shared with the editor popup menu.
+ * src/document.c:
+   Open a new document automatically after closing all documents.
 
 
 2010-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
