Move Go to Marker menu items to Search menu. Rename popup editor menu item Commands -> Edit.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5245 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-09-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/interface.c, geany.glade:
+   Move Go to Marker menu items to Search menu.
+   Rename popup editor menu item Commands -> Edit.
+
+
 2010-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/ui_utils.c:
