Make Find Selected commands repeat the last search if the selection was lost.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5247 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
    Rename popup editor menu item Commands -> Edit.
  * src/callbacks.c, src/search.c, src/search.h:
    Move find_again() to search.c.
+ * src/search.c:
+   Make Find Selected commands repeat the last search if the selection
+   was lost.
 
 
 2010-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
