Unify Find Selection strings.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5249 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
    was lost.
  * doc/geany.txt, doc/geany.html:
    Add docs for Find Selection keybindings.
+ * src/interface.c, src/keybindings.c, geany.glade:
+   Unify Find Selection strings.
 
 
 2010-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
