Move 'Edit->Commands->Insert Alternative White Space' to editor popup Insert menu.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5255 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@
    Add docs for Find Selection commands.
  * src/document.c:
    Fix segfault on idle callback when quitting.
+ * src/interface.c, src/keybindings.c, geany.glade:
+   Move 'Edit->Commands->Insert Alternative White Space' to editor popup
+   Insert menu.
 
 
 2010-09-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
