Move editor popup menu Insert Comments submenu to top of Insert menu.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5256 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@
  * src/interface.c, src/keybindings.c, geany.glade:
    Move 'Edit->Commands->Insert Alternative White Space' to editor popup
    Insert menu.
+ * src/interface.c, geany.glade:
+   Move editor popup menu Insert Comments submenu to top of Insert menu.
 
 
 2010-09-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
